--- a/index.html
+++ b/index.html
@@ -7,6 +7,40 @@
     <title>Balle bot - Modere a sua comunidade do Discord</title>
 </head>
 <body>
+    <header>
+<img src="Vector.png">
+<nav>
+    <a>Comunidade Ballerini</a>
+    <a>Tutorial</a>
+    <a>Open Source</a>
+    <a>Comando</a>
+</nav>
+    </header>
     
+    <main>
+    <section>
+<div>
+<h1>Balle Bot</h1>
+<h2>Deixe a sua comunidade segura de um jeito fácil</h2>
+<button>Me adicione</button>
+</div>
+<img src="Group 4.svg">
+    </section>
+
+
+    <section>
+<h3>O que ela faz por você?</h3>
+<p>1. Cria um sistema de verificação capcha para novos membros garantirem que não são robôs</p>
+<p>2. Possui um sistema de banimento automático para links suspeitos que forem enviados na comunidade</p>
+<p>3. Sistema de avisos e banimento manual, para pessoas administradoras utilizarem
+</p>
+    </section>
+
+    </main>
+
+    <footer>
+<img src="Screenshot_2.png">
+    </footer>
+
 </body>
 </html>
